Fixed UI bug for logo cutoff on all pages, should work now. Check trello. Pls gimme an ameeeen

--- a/assets/css/shared.css
+++ b/assets/css/shared.css
@@ -47,6 +47,7 @@ body {
 .logo-main-svg {
     width: 260px;
     margin: 0 auto;
+    min-height: 125px;
 }
 
 .info-text {
